<resources>
    <string name="app_name">借阅伴侣</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="permission_deny">未获得必要权限，无法使用</string>
    <string name="login_now">登录</string>
    <string name="register">注册</string>
    <string name="next">接下来</string>
    <string name="login">登录</string>
    <string name="nick">用户名</string>
    <string name="empty_nick">输入用户名</string>
    <string name="error_email">输入正确邮箱</string>
    <string name="short_pwd">密码需六位以上</string>
    <string name="username_registered">该用户名已被注册</string>
    <string name="register_fail">注册失败</string>
    <string name="email_or_username">用户名/邮箱</string>
    <string name="empty_nick_or_email">输入用户名或邮箱</string>
    <string name="empty_pwd">输入密码</string>
    <string name="username_not_register">邮箱或用户名不存在</string>
    <string name="error_pwd">密码错误</string>
    <string name="login_succ">登录成功</string>
    <string name="register_succ">注册成功</string>
    <string name="login_fail">登录失败</string>
    <string name="pwd">密码</string>
    <string name="email">邮箱</string>
    <string name="tel">手机号</string>
    <string name="empty_tel">手机号为空</string>
    <string name="loading">加载中...</string>
    <string name="Error">出错</string>
    <string name="check">检查网络连接</string>
    <string name="back">返回</string>
    <string name="work_code">工号</string>
    <string name="empty_code">输入工号</string>
    <string name="logining">登录中...</string>
    <string name="error">出错</string>
    <string name="name">姓名</string>
    <string name="registering">注册中...</string>
    <string name="wait">审核通过后，即可登录。</string>
    <string name="get">get</string>
    <string name="wrong_pwd">工号或密码有误</string>
    <string name="wait_check">请等待审核后，再登录</string>
    <string name="scan">借还扫码</string>
    <string name="contact">通讯录</string>
    <string name="check_new">审核新人</string>
    <string name="uncheck">未审核</string>
    <string name="appept">已通过</string>
    <string name="deny">已拒绝</string>
    <string name="check_">审核</string>
    <string name="deny_">拒绝</string>
    <string name="appept_">接受</string>
    <string name="succ">操作成功</string>
    <string name="borrow">借书</string>
    <string name="return_">还书</string>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="scan_result">扫码结果</string>
    <string name="confrim_borrow">确认借出</string>
    <string name="confrim_return">确认还回</string>
    <string name="error_">操作出错</string>
    <string name="info">软件杯  祖国的花朵队</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="other">其它</string>
    <string name="scan_and_info">扫码和资讯</string>
    <string name="normal">常规</string>
    <string name="notify">通知</string>
    <string name="notify_">管理通知设置</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_">遇到问题或建议</string>
    <string name="update">检查更新</string>
    <string name="update_">已是最新版本</string>
    <string name="account">账号设置</string>
    <string name="logout">退出账号</string>
    <string name="news">公告</string>
    <string name="borrow_succ">借书成功</string>
    <string name="return_succ">还书成功</string>
    <string name="statistic">统计数据</string>
    <string name="douban_score">豆瓣评分</string>
    <string name="add_book">添加图书</string>
    <string name="add_succ">添加成功</string>
</resources>
