<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="com.lvqingyang.librarymanager.SettingActivity">
    <include layout="@layout/toolbar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.lvqingyang.librarymanager.view.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:type="@string/normal"
                custom:title="@string/notify"
                custom:showInfo="true"
                custom:info="@string/notify_"/>
            <com.lvqingyang.librarymanager.view.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:type="@string/about"
                custom:title="@string/feedback"
                custom:showInfo="true"
                custom:info="@string/feedback_"/>
            <com.lvqingyang.librarymanager.view.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:showType="false"
                custom:title="@string/update"
                custom:showInfo="true"
                custom:info="@string/update_"/>
            <com.lvqingyang.librarymanager.view.SettingItem
                android:id="@+id/logout_si"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:type="@string/account"
                custom:title="@string/logout"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
